# solana-float-safety

./: .gitignore  Cargo.toml  Makefile  README.md
src/: double_ops.rs  float_ops.rs  lib.rs
tests/: balance_edge_cases.rs  defi_calculation_tests.rs  f64_financial_edge_cases.rs  f64_precision_tests.rs  financial_precision_tests.rs  float_tests.rs  precision_edge_cases.rs  precision_stability_tests.rs
