cargo-features = ["edition2024"]
[package]
name = "solana-floats"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.3.0"

[dev-dependencies]
solana-program-test =  "2.3.0"
solana-sdk = "2.3.0"
tokio = { version = "1.0", features = ["macros"] }
